--- a/yttkl/长短句之碎片化的表达.md
+++ b/yttkl/长短句之碎片化的表达.md
@@ -1,3 +1,36 @@
-长短句之碎片化的表达  
-内容待续  
-END  
+长短句之天涯墨客说碎片化的表达。  
+一楼，祭天祭地祭DOTA。艾特碎片化阅读，艾特只言片语的态度，敬文字的无辜，敬世界的破碎，敬有口难言的哀嚎。  
+二楼，天涯墨客写碎片化的表达之前言。  
+显而易见的是，按照汉赋唐诗宋词元曲明清小说的惯例，碎片化的阅读的时代之下，自然而然的就是碎片化的表达。  
+那些只言片语的所表达的也只是一时的态度或情绪，其背后则是逻辑思维思绪的支离破碎与残缺零碎不堪。  
+当字句与言辞只是一种跟风站队的盲目与盲从，文言与章节就成为了一种啰嗦与累赘。  
+所以，既然是碎片化的表达，其主题也就是无题，罗列如下。  
+无题其一  
+碎片化的表达，也只是单词与单词的随机组合罗列，而不是句子与句子的排列与宣泄，更加不是章节与章节的精心安排与穿插。于是乎，书不成书，无题成题。  
+碎片化的表达，其本身也表达着思维思绪的简单与简化，却无关简洁，只是一种混乱和凌乱。  
+碎片化的表达，不仅是在切割现实，也在肢解想象与联想。  
+碎片化的表达，不仅在表达着肤浅与浅薄，也在表达着生活与知识的曲解与消融。  
+碎片化的表达，不仅是在淡化写者的味蕾，也在增强读者的饥渴，其结果就是，写者在制造文字沙漠，而读者却溺亡于海洋。  
+碎片化的表达，取媚的只有眼球，而不再审视灵魂，其造就的是，空洞与空虚的躯壳之下，尽是矫揉造作的无比尴尬与窘迫，无病呻吟的令人作呕且沮丧，其排挤与驱赶的何止是厚重的脚步和沉闷的呼吸，还有沉重的头颅，也有不再坚定与坚实的长篇信仰。  
+碎片化的表达，躲在浮华浮躁的背后，嘲笑与讥讽那些啰嗦的堆积与重复的叠加，成为一种简短的常识与典故，那么，内涵与深刻就是一个精悍短小的笑话与段子。  
+碎片化的表达，不再需要语言的底层逻辑构建，组成它们本身的文字齿轮就不需要润滑，当喉结蠕动，发出去的声响，是如此的单调与刺耳。  
+碎片化的表达，还能在这个天罗地网的文字追捕时代，还能自由活动，它唯一的凭借就是毫无意义的态度，毫无内容的态度，毫无意味的态度，表达的只是一种转瞬即逝的情绪心绪思绪，之后，如漏网之鱼，如滴水入海，如柳絮飞扬。  
+碎片化的表达，何尝又不是一种大多数的沉默与冷漠，对贪赃枉法的沉默，对阶级鸿沟的冷漠，对理想与现实的巨大悲怆，对社会生活的调与剂的无声无言，也是对鸦雀无声最好最标准的语焉不详。   
+碎片化的的表达，成为当下或者以后的书面格式，拍拍熊就能永远不死，永远在这些插楼混贴的龌龊与肮脏里苟活与不朽，至于某博某呼某瓣，如六朝流水，繁华竞逐之后，悲恨相续。  
+无题其二  
+碎片化的表达，成为文字时代的核心主题，风不满楼，雨不滂沱，黄昏之后，谁听蚊虫嘶哑，谁望星河斗转，谁写鬼魅泪下，谁敬三尺神明。  
+碎片化的表达，把文字本来面目曲解禁用之后，还有剩下的标点符号与表情包，誓死抵抗，亦或，谎言连篇，连同赞美与风雅颂。  
+碎片化的表达，字节退化为音节之后，汉赋可以很短，唐诗成为无脑段子，宋词化为小段旋律，元曲只剩铜锣，明清小说不再传奇，然后，文言只是一种单一的服从，包括史书与史学。  
+碎片化的表达，当文字成为逻辑符号，数学与哲学就该死不瞑目，牛小顿就该烟消云散，吐舌老头就该看不见太阳，波无耳就该活活饿死，人间就不该有光，人们也不必知道，后来人也无需知道。只是，骑牛老头还是留下了一篇玄文，孔夫子还是留下了三千门人，头顶星空与道德律令，从来都是，不为尧存，不为桀亡。  
+碎片化的表达，随情绪零落，随思绪飞扬，随心绪凋谢，不见春江花月夜，没有人迹板桥霜，再无巴山夜雨时，何来对愁眠，何来花弄影，何来蓑笠翁，只有五斗米，只有朱门肉，只有天寒炭，只有一只不知死活的猫。  
+碎片化的的表达，把字与字，安排在那些钢铁深林里面的格子间，陌生与冷漠结为邻居，热情与彩虹齐飞，敷衍与漫不经心不相伯仲。  
+碎片化的表达，把谜底与谜面反手倒转，谁演鱼龍舞，谁嗅梅花香，谁站长坂坡，谁住贾雨村。风月无关金与瓶，醉掀朱门是二弟，不问浔阳江口，何人夜吟花与鹤，东汉末年单八将，孟德玄德字翼德，花果山下桃花艳，不见当年葬花人。  
+碎片化的表达，把口与口，写成缺省符号，把目与目，写成道路指示牌。于是，猪与猴，不再相信火与烟，再厉害的辣味森破，也倒在了干拉之后，安然长逝，如此才有一加一加一。  
+无题其三  
+碎片化的表达，笔墨拱手让于键盘，稿纸不屑于屏幕，书桌不安于角落，谁续离骚之无韵，谁继史家之绝唱，谁让小人屈膝千年，谁让君子不容不器，谁让电子垃圾成为主食，谁把书籍焚烧，谁把孟子踢出家门，谁把太监拉进孔庙，再问一句，到底是谁，还有谁。  
+碎片化的表达，在很多年前，有人把荒谬写成书，有人把安娜复活，有人让吝啬鬼永生，有人给悲惨世界留下希望，有人给甲壳虫小说，有人给昆虫立传，有人给人类写过去和从前。而如今现在，荒谬只是荒诞的同义词，而且还是字面意思的那种，安娜被彻底分解，时尚之都只剩铁塔，吝啬鬼成了银行家与慈善家，甲壳虫只是一辆铁皮棺材，昆虫受不了城市里的灯红酒绿，只能苟活乡野，互联网上的人会写三种茴字，却写不出自己的那一撇一捺，而希望则是现实世界里的鬼魅，听说的很多，看见的，几乎没有，至于能摸到的，大概也只有在KTV里，而且还是很黏手的那种。  
+碎片化的表达，在上个世纪，有人在夜里睁眼却要寻找光明，有人在今天喂马劈材也敢奢望明天的春暖花开，有人在一沟绝望的死水里去妄想寻找翡翠与绿酒，有人面对脚下的土地却忽然泪流满面。而在本世纪，有人漂洋过海只是为了下一副象棋，有人面对天灾人祸甘愿为幸福之鬼雄，有人把一切口安写成畅销经书。于是乎，在一个诗文传承三千多年的国度，诗人死在了唐朝，到了二十一世纪才入土为安，其文学和文人也大抵如是。真可谓是，最是人间留不住，朱颜辞镜花辞树，念天地之悠悠，独怆然而涕下。  
+碎片化的表达，活死人墓冲哥隐，小李飞刀楚留香，四大名捕追双龙，还珠楼下英雄志，武侠童话尽荒芜。在本世纪，没落的何止是武打片，还有武侠剧。至于修仙的，玄幻的，奇幻的，穿越的，都市的，滚就一个字，老子只说一次。 
+碎片化的表达，天涯墨客，东拉西扯，瞎比乱造，不知所云，暂写无题有三。  
+END--仰头天空蓝。  
+ 
