--- a/yttkl/长短句之乱翻史书的因由.md
+++ b/yttkl/长短句之乱翻史书的因由.md
@@ -10,7 +10,7 @@
 只不过，于寻常且普通的国人而言，注定在角落里吃灰的二十四部正史和出了学校就还给老师的历史教材，在现实生活中获取历史常识的常用的方便快捷的方式之一却是各种历史相关的国产影视剧和小说。且先不说与历史血脉繁杂的历史小说，就单说最近十多年来，那些搭乘互联网高速列车的硬蹭历史的流量烂剧，披着古呕的外衣，碰瓷那些历史大家大佬的边角料，却连最基本的普及历史常识都做不到，更不用说什么重新演绎与发掘历史现场了，也借着两只烂脸皮的雌雄动物的不断拉低下限的作秀和洒下水道糖精，呕了一段又一段的农家天然肥料，修饰曰某风华某山纪某清乐某梦录，更不用说早就烂大街的辫子秃头戏。而那些所谓的网络历史小说，也无非就是借着穿越题材，把关公战秦琼的笑话段子，抄了一次又一次，水了一遍又一遍，连最基本的历史见解与研究都勾连不上，也无非就是借着古人的名和字，把史书中那些人和事，用毫无逻辑与清汤寡水的大白话，洗了一层又一层，用历史小说的贴条封装上，如工业流水线一般，靠着复制黏贴，日复一日年复一年的生产着网络垃圾与糟粕。  
 
 在此，稍微列举垃圾与糟粕一例，天涯墨客必须点明点出国产六月古呕烂剧之最烂，首推某梦某录，因为这部烂剧，某豆某瓣高分就是一个笑话。因为这个笑话让那些名副其实的高分剧情何以堪且如何并而立之。  
-本来天涯墨客对这些那些流量热度营销烂剧眼皮都懒得抬一下的，只是这些烂剧无所不用其极的非常下头营销手段，除了聋子瞎子不受影响之外，但凡一个会上网的正常人都在不胜其烦且不堪其扰的接受这些烂剧的狂轰滥炸与围追堵截。尤其以某梦录为最为甚，这个所谓的高分烂剧在那些恰烂钱的商业平台肆无忌惮的的收割嘿白流量也就算了，特别是某站那些专业恰烂钱的阿噗主们，写者在某个二的十次方论坛找大姐姐们的即时资源的时候，都躲不开这不部烂剧极其恶心的软文转载，老子真是曹了。意思是这部烂剧不仅要地上的嘿白流量，连地下的下三路的黄流量都要收割，它不下头，谁下头，它不恶心，谁恶心，尤其是这部剧的制作宣发与播映，不仅碰瓷关汉卿，披着女拳的外衣，还借着那两张张早已烂了十多年的老脸颜值，在南极见处的加持下，将资本的恶臭与拜金的嘴脸演绎的淋漓尽致其且活灵活现。  
+本来天涯墨客对这些那些流量热度营销烂剧眼皮都懒得抬一下的，只是这些烂剧无所不用其极的非常下头营销手段，除了聋子瞎子不受影响之外，但凡一个会上网的正常人都在不胜其烦且不堪其扰的接受这些烂剧的狂轰滥炸与围追堵截。尤其以某梦录为最为甚，这个所谓的高分烂剧在那些恰烂钱的商业平台肆无忌惮的的收割黑白流量也就算了，特别是某站那些专业恰烂钱的阿噗主们，写者在某个二的十次方论坛找大姐姐们的即时资源的时候，都躲不开这不部烂剧极其恶心的软文转载，老子真是曹了。意思是这部烂剧不仅要地上的嘿白流量，连地下的下三路的黄流量都要收割，它不下头，谁下头，它不恶心，谁恶心，尤其是这部剧的制作宣发与播映，不仅碰瓷关汉卿，披着女拳的外衣，还借着那两张张早已烂了十多年的老脸颜值，在南极见处的加持下，将资本的恶臭与拜金的嘴脸演绎的淋漓尽致其且活灵活现。  
 当然，那个连演花木兰都扑街的某仙姐与连一个林平之都演不了的阳过，终于在这部烂剧里凑合成一个母鸡与乌龟的故事，自然也是一种录人的原粪和呕像。
 
 如果说，寻常大众需要把历史与史书解读的有趣与娱乐，是庸碌无聊生活里面的一种刚需。请记得在历史常识正确规范的前提下，尤其是在公共场合，无论是省级卫视台还是网络平台，特别是如今在各种摆烂恰烂钱的历史影视剧与畅销书中，那些大话与歪解历史越来越流行且大行其道的时候，而在传统正解的历史与史学面前，个人私下乱翻书时候的猜测与揣测，甚至是瞎编乱造都可以，都可以用小说和杂谈杂想一锅乱炖和一通乱弹，而个人无论如何的乱炖乱弹，都不会撼动那一条已经流淌了五千年的历史长河。  
@@ -45,4 +45,4 @@
 唉，苦夏难挨难过啊，却好在，这个时候也是桃子正当吃的时候，而很下酒的豌豆也就在个把月之后了。正所谓：  
 静看春风，乱翻万卷种桃书，不耐炎夏，闲听豌豆敲铜锣，是为农家苦中作乐。
 
-END--仰头天空蓝
+END--仰头天空蓝。
