--- a/yttkl/长短句之夜魔的失眠.md
+++ b/yttkl/长短句之夜魔的失眠.md
@@ -1,4 +1,4 @@
-长短句之夜魔的失眠
+长短句之夜魔的失眠  
 一楼祭天祭地祭DOTA，艾特本故事的纯属虚构，艾特如有雷同的纯属巧合，艾特含沙射影的似是而非。  
 二楼开门见山，直奔主题，有关夜魔的失眠，话说：  
 最近几个月来，不知道什么原因，夜魔常常失眠，说来这也是一个不好笑的笑话。  
@@ -74,4 +74,4 @@
 如果说，在另外一个平行的时空，七到十还有另外一种结局的可能，而在这第十一次，回到梦与想最初开始的地方，无论结果如何，都不用熬夜等失眠，不用失眠等天亮，街头的小雨也不用再淋一次。将这些所有的不用都切割完全以后，剩下的，无非就是，眼底有霜几层，心有灰烟缕缕。  
 我奋力回溯时光，遍历所有可能，不是为了证明我有多无聊，只是为了告诉后来人，绝望为之虚妄，正与希望相同，仅此而已。这是编织者斯吉茨格尔在今年六月的第一个深夜写给天涯墨客的一封回信的结尾。
 
-END--仰头天空蓝
+END--仰头天空蓝。
