Update and rename yttkl/长短句之工地上的獸.md to yttkl/y2022m1_m7/长短句之工地上的獸.md

--- a/yttkl/y2022m1_m7/长短句之工地上的獸.md
+++ b/yttkl/y2022m1_m7/长短句之工地上的獸.md
@@ -17,4 +17,4 @@
 如果说，老吾老以及人之老，是一句笑话，而幼吾幼以及人之幼，也是一句空话。孟子就活该买一盆豆腐磕死，以谢天下。  
 在地球上，从獸进化到人，用了好几万年的光阴，而在艾则拉斯大陆，从人退化到獸，只需要半天的会议时间。这是会议记录员天涯墨客写在那个特别经济会议的末尾评论，有关工地上的獸，一群年过六旬的獸。
 
-END--仰头天空蓝
+END--仰头天空蓝。
